--- a/WEB_UI/Areas/IDSMORS/Views/Home/ParksWagons.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/ParksWagons.cshtml
@@ -26,24 +26,24 @@
 <div class="container-fluid idsmors-report">
     <div class="card">
         <div class="card-header bg-secondary text-white">
-            @*<div class="container">*@
+            <div class="container">
 
             <form id="fm-select-park-wagon">
                 <div class="form-row">
-                    <div class="col-md-3 mb-3 text-right">
+                    <div class="col-sm-3 mb-3 text-right">
                         <label class="col-form-label" for="select-park-wagon">@IDSMORSResource.label_park_wagon_title:</label>
                     </div>
-                    <div class="col-md-3 mb-3">
+                    <div class="col-sm-3 mb-3">
                         <select class="form-control" id="select-park-wagon" name="select-park-wagon"></select>
                     </div>
-                    <div class="col-md-6 mb-3">
+                    <div class="col-sm-6 mb-3">
                         <button type="button" class="btn btn-warning btn" id="add-park">Добавить</button>
                         <button type="button" class="btn btn-warning btn" id="edit-park">Переименовать</button>
                         <button type="button" class="btn btn-warning btn" id="delete-park">Удалить</button>
                     </div>
                 </div>
             </form>
-            @*</div>*@
+            </div>
 
         </div>
         <div class="card-body">
