--- a/WEB_UI/Content/view/shared/_idsmors.css
+++ b/WEB_UI/Content/view/shared/_idsmors.css
@@ -12,40 +12,47 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section, main {
-	display: block;
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
 }
+
 ol, ul {
-	list-style: none;
+    list-style: none;
 }
+
 blockquote, q {
-	quotes: none;
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
+
+    blockquote:before, blockquote:after,
+    q:before, q:after {
+        content: '';
+        content: none;
+    }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
+
+
 
 
 .bg-x {
@@ -53,9 +60,31 @@ table {
 }
 
 .bg-amkr {
-    background-color: #F05F40;
-    color:white;
+    background-color: #F25823;
+    color: white;
 }
+
+header {
+    position: relative;
+    width: 100%;
+    min-height: auto;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    background-position: center;
+    text-align: center;
+    color: white;
+}
+
+    header .header-content {
+        position: relative;
+        text-align: center;
+        margin-top: 55px;
+        /*padding: 15px;*/
+        width: 100%;
+        color: rgba(51, 29, 53, 0.8);
+    }
 
 /**/
 
@@ -64,7 +93,7 @@ table {
 Primary style
 
 -------------------------------- */
-/*html * {
+html * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -84,7 +113,62 @@ body {
 
 a {
   text-decoration: none;
-}*/
+}
+
+.navbar-amkr {
+    border-color: rgba(34, 34, 34, 0.05);
+    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+    -webkit-transition: all 0.35s;
+    -moz-transition: all 0.35s;
+    transition: all 0.35s;
+}
+
+    .navbar-amkr .navbar-header .navbar-brand {
+        color: #F05F40;
+        font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+        font-weight: 700;
+        text-transform: uppercase;
+    }
+
+        .navbar-amkr .navbar-header .navbar-brand:hover,
+        .navbar-amkr .navbar-header .navbar-brand:focus {
+            color: white;
+        }
+
+    .navbar-amkr .navbar-header .navbar-toggle {
+        font-weight: 700;
+        font-size: 12px;
+        color: rgba(255, 252, 252, 0.7);
+        text-transform: uppercase;
+    }
+
+    .navbar-amkr .nav > li > a,
+    .navbar-amkr .nav > li > a:focus {
+        text-transform: uppercase;
+        font-weight: 700;
+        font-size: 13px;
+        color: rgba(255, 252, 252, 0.7)
+    }
+
+        .navbar-amkr .nav > li > a:hover,
+        .navbar-amkr .nav > li > a:focus:hover {
+            color: white;
+        }
+
+    .navbar-amkr .nav > li.active > a,
+    .navbar-amkr .nav > li.active > a:focus {
+        color: white !important;
+        background-color: transparent;
+    }
+
+        .navbar-amkr .nav > li.active > a:hover,
+        .navbar-amkr .nav > li.active > a:focus:hover {
+            background-color: transparent;
+        }
+
+
+
+
 
 /* -------------------------------- 
 
