--- a/WEB_UI/Content/view/shared/filter-menu.css
+++ b/WEB_UI/Content/view/shared/filter-menu.css
@@ -481,6 +481,7 @@ xcustom form elements
 -------------------------------- */
 .cd-filter-block {
     margin-bottom: 1.6em;
+    text-align:left;
 }
 
     .cd-filter-block h4 {
