--- a/WEB_UI/Content/view/idsmors/park_wagons.css
+++ b/WEB_UI/Content/view/idsmors/park_wagons.css
@@ -1,3 +1,11 @@
-﻿.idsmors-report {
+﻿html {
+    font-size: small
+}
+
+body {
+    /*font-size:13px;*/
+}
+
+.idsmors-report {
     padding-top: 20px;
 }
