--- a/WEB_UI/Content/view/shared/_idsmors.css
+++ b/WEB_UI/Content/view/shared/_idsmors.css
@@ -94,25 +94,29 @@ Primary style
 
 -------------------------------- */
 html * {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 *, *:after, *:before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  font-size: 100%;
-  font-family: "Ubuntu", sans-serif;
-  color: #f35535;
-  background-color: #f1f1f1;
+    font-size: 100%;
+    font-family: "Ubuntu", sans-serif;
+    /*color: #f35535;
+    background-color: #f1f1f1;*/
+    /*font-size: 0.7rem;*/
+    /*font-family: "Open Sans", sans-serif;*/
+    color: #331d35;
+    background-color: #e7e7e7;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .navbar-amkr {
@@ -147,7 +151,7 @@ a {
         text-transform: uppercase;
         font-weight: 700;
         font-size: 13px;
-        color: rgba(255, 252, 252, 0.7)
+        color: rgba(255, 252, 252, 0.7);
     }
 
         .navbar-amkr .nav > li > a:hover,
