--- a/WEB_UI/Areas/IDSMORS/Views/Home/ParksWagons.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/ParksWagons.cshtml
@@ -49,7 +49,7 @@
         <div class="card-body">
             <div class="form-row">
                 <div class="col-md-12 mb-3">
-                    <table class='compact cell-border display' id="table-wagons-park" style="width:100%" cellpadding="0"></table>
+                    <table class='table table-striped table-bordered' id="table-wagons-park" style="width:100%" cellpadding="0"></table>
                 </div>
             </div>
         </div>
@@ -81,6 +81,37 @@
             <!-- Allow form submission with keyboard without duplicating the dialog button -->
             <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
         </fieldset>
+    </form>
+</div>
+
+<div id="add-wagon-park" title="" style="display:none">
+    <div class="alert" id="add-wagon-park-alert">
+    </div>
+    <form id="form-add-wagon-park">
+        <div class="form-row">
+            <table class='table table-striped table-bordered' id="table-add-wagons-park" style="width:100%" cellpadding="0"></table>
+
+        </div>
+        @*<fieldset>
+            <div class="form-row">
+                  <div class="col-md-12 mb-3">
+                      <label class="col-form-label" for="name-park-wagon-ru">Парк подвижного состава (ru):</label>
+                      <input type="text" class="form-control" id="name-park-wagon-ru" placeholder="">
+                      <div class="invalid-feedback">
+                          Это поле не может быть пустым
+                      </div>
+                  </div>
+                  <div class="col-md-12 mb-3">
+                      <label class="col-form-label" for="name-park-wagon-en">Парк подвижного состава (en):</label>
+                      <input type="text" class="form-control" id="name-park-wagon-en" placeholder="">
+                      <div class="invalid-feedback">
+                          Это поле не может быть пустым
+                      </div>
+                  </div>
+              </div>
+                     <!-- Allow form submission with keyboard without duplicating the dialog button -->
+                     <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
+                 </fieldset>*@
     </form>
 </div>
 
