--- a/WEB_UI/Areas/IDSMORS/Views/Home/ParksWagons.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/ParksWagons.cshtml
@@ -115,7 +115,7 @@
     </form>
 </div>
 
-<div id="dialog-confirm" title="Empty the recycle bin?">
+<div id="dialog-confirm" title="Empty the recycle bin?" style="display:none">
     <p id="dialog-confirm-text">
         <span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>
     </p>
