--- a/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicCards.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicCards.cshtml
@@ -589,3 +589,9 @@
     </div>
     <a href="#0" class="close cd-img-replace">Close</a>
 </div> <!-- .cd-project-content -->
+
+<div id="dialog-confirm" title="Empty the recycle bin?">
+    <p id="dialog-confirm-text">
+        <span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>
+    </p>
+</div>
