--- a/WEB_UI/Views/Shared/_IDS.cshtml
+++ b/WEB_UI/Views/Shared/_IDS.cshtml
@@ -111,7 +111,7 @@
                     <h2 class="section-heading">@GlobalResource.system_rail_transport_title</h2>
                     <hr class="light">
                     <p class="text-faded">@GlobalResource.system_rail_transport_description</p>
-                    <a href="#" class="btn btn-default btn-xl sr-button">@GlobalResource.link_goto</a>
+                    <a href='@Url.Action("Index", "Home", new { Area = "IDSRWT" })' class="btn btn-default btn-xl sr-button">@GlobalResource.link_goto</a>
                 </div>
                 <div class="col-md-4 text-center">
                     <h2 class="section-heading">@GlobalResource.system_transport_department_title</h2>
