--- a/WEB_UI/Content/view/idsrwt/arrival.css
+++ b/WEB_UI/Content/view/idsrwt/arrival.css
@@ -16,4 +16,11 @@ table.dataTable tbody tr:not(.selected).consignee-auxiliary.odd, table.dataTable
     background-color: #dbc8af;
 }*/
 
+p strong {
+    font-weight:bold;
+}
+
+p em {
+    font-style:italic;
+}
 
