--- a/WEB_UI/Areas/IDSMORS/Views/Shared/_IDSMORS.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Shared/_IDSMORS.cshtml
@@ -38,6 +38,9 @@
                             <a class="nav-link" href='@Url.Action("Index", "Home", new { area = "IDSMORS" })'>ИДС"УСПС"</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href='@Url.Action("Index", "Home", new { area = "IDSRWT" })'>ВДС «ЖД АМКР»</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" id="new-item" href="#document">Добавить</a>
                         </li>
                         @*<li class="nav-item">
