--- a/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
@@ -29,14 +29,17 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="nav navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href='@Url.Action("Index", "Home", new { area = "" })'>Номе</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href='@Url.Action("Index", "Home", new { area = "IDSRWT" })'>ВДС «ЖД АМКР»</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href='@Url.Action("Index", "Home", new { area = "IDSMORS" })'>ИДС"УСПС"</a>
                         </li>
+                        @*<li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>*@
                     </ul>
                 </div>
             </div>
