--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -45,7 +45,7 @@
                 <li class="nav-item">
 
                     <div class="input-group">
-                        <label class="col-form-label text-white mr-2" for="select-date">За период: </label>
+                        <label class="col-form-label text-white mr-2" for="select-date">Выбрать период: </label>
                         <span id="select-date">
                             <input type="datetime" class="form-control-sm" id="date-start" name="date-start">
                             <input type="datetime" class="form-control-sm" id="date-stop" name="date-stop">
@@ -78,36 +78,12 @@
         </div>
     </div>
 </nav>
-
-@*<div class="row">
-        <div class="container-fluid">
-            <form>
-                <div class="form-row bg-light">
-                    <div class="offset-xl-2 col-xl-1 mb-3 mt-3 text-xl-right">
-                        <label class="col-form-label" for="select-station">Станция прибытия:</label>
-                    </div>
-                    <div class="col-xl-2 mb-3 mt-3">
-                        <select class="form-control" id="select-station" name="select-station"></select>
-                    </div>
-                    <div class="col-xl-1 mb-3 mt-3 text-xl-right">
-                        <label class="col-form-label" for="select-date">Период прибытия:</label>
-                    </div>
-                    <div class="col-xl-3 mb-3 mt-3 text-xl-left">
-                        <span id="select-date">
-                            <input type="datetime" class="form-control-sm" id="date-start" name="date-start">
-                            <input type="datetime" class="form-control-sm" id="date-stop" name="date-stop">
-                        </span>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>*@
 <div class="row">
     <div class="col-xl-12 mb-3 mt-2">
-        <div class="card border-secondary mb-3" >
-            <div class="card-header">Поезда по прибытию</div>
-            <div class="card-body text-secondary pl-3 pr-3">
-                <table class="display compact" id="table-sostav-arrival" style="width:100%"></table>
+        <div class="card border-dark mb-3">
+            <div class="card-header bg-secondary text-white">Поезда по прибытию</div>
+            <div class="card-body text-dark pl-3 pr-3">
+                <table class="table table-striped table-bordered" id="table-sostav-arrival" style="width:100%"></table>
             </div>
         </div>
     </div>
