--- a/WEB_UI/Content/view/idsrwt/incoming.css
+++ b/WEB_UI/Content/view/idsrwt/incoming.css
@@ -1,4 +1,21 @@
 ﻿body {
 }
 
+td.icon-ok {
+    background: url('../../../Images/idsrwt/ok.png') no-repeat center center;
+    /*cursor: pointer;*/
+}
 
+td.icon-warning {
+    background: url('../../../Images/idsrwt/warning.png') no-repeat center center;
+}
+
+table.dataTable tbody tr:not(.selected).status-in-work.odd, table.dataTable tbody tr:not(.selected).status-in-work.even {
+    background-color: #fcf2ba;
+}
+table.dataTable tbody tr:not(.selected).status-accepted.odd, table.dataTable tbody tr:not(.selected).status-accepted.even {
+    background-color: #aeffb9;
+}
+table.dataTable tbody tr:not(.selected).status-rejected.odd, table.dataTable tbody tr:not(.selected).status-rejected.even {
+    background-color: #fbcfcf;
+}
